src/test/deca/context/valid/introduction_variable_avec_nom_de_type.deca
// Description :
//introduction d'une variable avec un nom de type
//
// Resultats : 
// ok

{int int;}