src/test/deca/context/invalid/op_cmp_null.deca
// Description :
// test d'une comparaison avec null
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : Comparaison enre des objets de type int et null impossible (règle 3.33)

{
  1 > null;
}
